# MapReduce

./: CMakeLists.txt
include/: Coordinator.h  Plugin.h  Scheduler.h
src/: Coordinator.cpp  FIFO.cpp  Plugin.cpp  Scheduler.cpp  Worker.cpp  main.cpp
